blocks/recipes.css
.recipes {
  background-color: #0a2750;
  background-image: url(../images/background_recipes.svg);
  background-position: center;
  background-size: cover;
  height: 100vh;
}

.recipes__title {
  position: relative;
  top: 100px;
  left: 80px;
  max-width: 580px;
  font-family: "Inter";
  font-style: normal;
  font-weight: 500;
  font-size: 44px;
  line-height: 52px;
  color: #fff;
}

.recipes__subtitle {
  max-width: 438px;
  margin-top: 24px;
  margin-bottom: 80px;
  font-family: "Noto Serif";
  font-style: normal;
  font-weight: normal;
  font-size: 20px;
  line-height: 30px;
  color: #fff;
  position: relative;
  left: 80px;
  top: 80px;
}

.recipes__videos {
  display: flex;
  align-items: center;
  justify-content: center;
  gap: 40px;
  padding-top: 80px;
  position: relative;
  height: 370px;
}

.recipes__iframe {
  width: 480px;
  height: 273px;
  border: none;
  margin-bottom: 24px;
}

.recipes__videos p:first-of-type {
  position: absolute;
  bottom: 0;
  left: 265px;
  font-family: "Inter";
  font-style: normal;
  font-size: 20px;
  line-height: 30px;
  color: #fff;
  float: left;
  display: inline;
}

.recipes__videos p:last-of-type {
  position: absolute;
  bottom: 0;
  right: 265px;
  font-family: "Inter";
  font-style: normal;
  font-size: 20px;
  line-height: 30px;
  color: #fff;
}

